style dark.css
@font-face {
	font-family: 'delavan';
	src: url("fonts/delavan-webfont.woff2") format("woff2"), url("fonts/delavan-webfont.woff") format("woff");
}
@font-face {
	font-family: 'vampire-sigils';
	src: url("fonts/vampiresigils.woff2") format("woff2");
}
@font-face {
	font-family: 'vampire-dingbats';
	src: url("fonts/VampireDingbats.woff2") format("woff2");
}
@font-face {
	font-family: 'vampire-wod3';
	src: url("fonts/WOD3.woff2") format("woff2");
}
@font-face {
	font-family: 'Cormorant Garamond';
	src: url("fonts/CormorantGaramond-Regular.woff") format("woff");
}
@font-face {
	font-family: 'Cormorant Bold';
	src: url("fonts/CormorantGaramond-Bold.woff") format("woff");
}

/* ELIMINAR LAS FLECHITAS EN LOS CAMPOS NUMERICOS (SOLO CHROME Y OTROS POCOS) */
input[type="number"]::-webkit-inner-spin-button, 
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}


:root {
	--backgroundColor	: #2C3639;

	--accentColor		: #A27B5C;

	--secondaryColor	: #F1D3B3;
	
	--primaryColor		: #DCD7C9;
	
	--shadowColor     	: #000000ca;
	
	--successColor		:#4E9F3D;
	
	--failureColor		:#497174;
	
	--botchColor		:#CF0A0A;

	--mutedColor		:  #77888e;

	--customPointer: url('images/pointer.png'), pointer;


	--colorDeAdornos: var(--mutedColor);


}


/* Traer desde al Light Mode a partir de aca */
/* ----------------------------------- */



html,
body {
	cursor: url("images/cursor1.png"), auto;
	margin: 0;
	width: 100vw;
	height: 100vh;
	padding: 0;
	/* overflow: auto; */
	background-color: var(--backgroundColor);
}


* {
	font-family: 'Cormorant Bold', serif;
	color: var(--primaryColor);

	/* Make Everything UNSELECTABLE!! */
	-webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

}

h1,
h2 {
	font-family: 'delavan', serif;

}


/*  ESTILOS DE MODALES GENERAL  */

.modal {
	display: none;
	position: fixed;
	z-index: 3;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: none;

	/* Afecta la pantalla de fondo detras del modal */
	background-color: rgba(0, 0, 0, 0.8);

}

.modal-content {

	background-color: var(--backgroundColor);
	margin: 5vh auto;
	padding: 20px;
	border: 1px solid var(--accentColor);
	width: 50%;
	border-radius: 30px;
	border: 5px solid var(--primaryColor);
	box-shadow: 0 10px 20px 0 var(--shadowColor);

}

.modal-content h1 {
	text-align: center;
	font-family: 'delavan', serif;
	font-size: 3em;
	margin: 0;
}

.modal-buttons {
	display: flex;
	flex-direction: row;
	justify-content: flex-end;
	align-items: center;
	flex-wrap: nowrap;
	margin: 30px;
	gap: 20px;

}

.modal-buttons button {
	border-radius: 20px;
	padding-inline: 2em;
	padding-block: 0.3em;

	font-size: 1.2em;
	cursor: var(--customPointer);
	font-weight: bold;
	box-shadow: 0 5px 5px 0 var(--shadowColor);
}

.modal-button-save {
	background-color: var(--primaryColor);
	color: var(--backgroundColor);
}

.modal-button-close {
	background-color: var(--backgroundColor);
	color: var(--primaryColor);
}

.modal-buttons button:hover {
	background-color: var(--accentColor);
	box-shadow: 0 2px 5px 0 var(--shadowColor);
}







/* ----------CONTAINERS AND COLUMNS--------------- */
.super-container {
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: stretch;
	flex-wrap: nowrap;
	height: 100%;
	padding-inline: 15px;
	margin-inline: 20px;

}

.super-column:nth-child(1) {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
	min-width: 20rem;
	flex-basis: 30%;
	margin: 0 5px 5px;
	height: 100%;
}

.super-column:nth-child(2) {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	align-items: stretch;
	min-width: 800px;
	margin: 0;
	flex-basis: 70%;
	flex-grow: 2;
}

.super-column:nth-child(3) {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
	min-width: 15rem;
	flex-basis: 25%;
	margin: 0 5px 5px;
}

.column-left {
	padding: 10px 10px 10px 0;
	display: flex;
	flex-direction: column;
}

.column-middle {
	margin-top: 0;
	box-shadow: 0 2px 20px 0 var(--shadowColor);
	padding: 0;
	padding-inline: 25px;
	display: flex;
	flex-direction: column;
	align-items: stretch;
	flex-grow: 1;
}

.column-right {
	padding: 10px 0 10px 10px;
	display: flex;
	flex-direction: column;
	align-items: cen;
}

/* ----------------------------------------------- */

.container.info {
	position: relative;
	margin-bottom: 0;
}

/* LINEAS UNIENDO LOS PUNTITOS EN TODOS LADOS */
.form-group::after {
	content: "";
	display: block;
	position: absolute;
	bottom: 8px;
	height: 1px;
	background-color: var(--secondaryColor);
	width: 100%;
}

/* PRIMERA SUPER COLUMN */





/* TABS */

.tab-buttons-container {
	margin-top: 10px;
	display: flex;
	justify-content: space-between;
	gap: 0
}

.tab-button {
	color: var(--mutedColor);
	font-family: 'delavan', serif;
	font-size: 15px;
	flex-grow: 1;
	background-color: var(--backgroundColor);
	border: 2px solid var(--primaryColor);
	padding: 10px;
	cursor: var(--customPointer);
	display: inline-block;
	border-top-right-radius: 20px;
	border-top-left-radius: 20px;
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.tab-button.active {
	background-color: transparent;
	color: var(--primaryColor);
	border: 2px solid var(--primaryColor);
	border-bottom: none;
}

.tab-content {
	display: none;
}

.tab-content.active {
	display: block;
	border: 2px solid var(--primaryColor);
	border-top: none;
	min-height: fit-content;
	height: 410px;


}

/* TAB: DISCIPLINAS */
.discipline-container {
	display: flex;
	flex-direction: column;
	padding: 30px 10px 10px;
}

.form-group.discipline,
.form-group.merito {
	position: relative;
	display: flex;
	margin-bottom: 0;
	position: relative;
	justify-content: space-between;
	width: 100%;
	align-items: baseline;
}
/* ... */

